ProjetCompil/Verif/Test/fail/typeNonCompatible7.cas
program
	A : array [1..14] of boolean;
	B : boolean;
begin
	A := B;
end.
	
